--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,7 @@ coverage.xml
 .hypothesis/
 .pytest_cache/
 cover/
+coverage/
 
 # Translations
 *.mo
@@ -143,6 +144,8 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+**/*.env
+!.env.example
 
 # Spyder project settings
 .spyderproject
@@ -187,6 +190,7 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file. However, if you prefer, 
 #  you could uncomment the following to ignore the entire vscode folder
 # .vscode/
+.vscode/settings.json
 
 # Ruff stuff:
 .ruff_cache/
@@ -205,3 +209,15 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Additional files
+settings.local.json
+*.tmp
+*.bak
+*.swp
+
+# Node.js
+node_modules/
+
+# Development
+dev/
